--- a/app/index.html
+++ b/app/index.html
@@ -20,13 +20,12 @@
         <select ng-model="orderProp">
           <option value="name">Alphabetical</option>
           <option value="age">Newest</option>
-	  <option value="-age">Oldest</option>
         </select>
 
       </div>
       <div class="col-md-10">
         <!--Body content-->
-        OrderProp: {{orderProp}}
+
         <ul class="phones">
           <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
             <span>{{phone.name}}</span>
@@ -39,4 +38,5 @@
   </div>
 
 </body>
+<pre>{{phones | filter:query | orderBy:orderProp | json}}</pre>
 </html>
