--- a/app/index.html
+++ b/app/index.html
@@ -27,8 +27,9 @@
         <!--Body content-->
 
         <ul class="phones">
-          <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
-            <span>{{phone.name}}</span>
+          <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
+            <a href="#/phones/{{phone.id}}" class="thumb"><img src="{{phone.imageUrl}}"></a>
+            <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
             <p>{{phone.snippet}}</p>
           </li>
         </ul>
@@ -38,5 +39,4 @@
   </div>
 
 </body>
-<pre>{{phones | filter:query | orderBy:orderProp | json}}</pre>
 </html>
